# Ghost-Downloader-3

./: .gitignore  README.md  main.py  pyproject.toml
browser_extension/app/: package-lock.json
browser_extension/app/public/: manifest.json
browser_extension/app/scripts/: build.mjs
features/m3u8_pack/: config.py  task.py
