[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "features*", "android*", "scripts*"]
exclude = ["browser_extension*", "tests*"]

[tool.setuptools.package-data]
"app" = ["assets/**/*", "assets/icons/**/*", "assets/file_icons/**/*"]
"features" = ["*/icons/**/*"]

[project]
name = "ghost-downloader-3"
version = "4.0.1"
description = "An AI-boost cross-platform multi-protocol fluent-design concurrent downloader built with Python & Qt."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioftp[socks]>=0.27.2",
    "desktop-notifier>=6.2.0",
    "libtorrent>=2.0.13",
    "libtorrent-windows-dll>=0.0.3; sys_platform == 'win32'",
    "loguru>=0.7.3",
    "m3u8>=6.0.0",
    "mpegdash>=0.4.1",
    "nuitka>=4.1.3",
    "pyside6~=6.10.3",
    "pyside6-fluent-widgets>=1.11.2",
    "qrcode[png]>=8.2",
    "wreq>=0.12.0",
    "winloop>=0.6.0; sys_platform == 'win32'",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
Ghost-Downloader-3 = "main:main"

[dependency-groups]
dev = [
    "types-libtorrent>=2.0.11.20250816",
]
